--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
             <h1>My Gallery</h1>
             <div class="gallery">
                 <figure class="card">
-                    <img src="/img/image1.jpg" alt="image1">
+                    <img src="img/image1.jpg" alt="image1">
                     <figcaption>Image1</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/img/image2.jpg" alt="image2">
+                    <img src="img/image2.jpg" alt="image2">
                     <figcaption>Image2</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/img/image3.jpg" alt="image3">
+                    <img src="img/image3.jpg" alt="image3">
                     <figcaption>Image3</figcaption>
                 </figure>
 
