--- a/index.html
+++ b/index.html
@@ -28,62 +28,62 @@
                 </figure>
 
                 <figure class="card">
-                    <img src="/img/image4.jpg" alt="image4">
+                    <img src="img/image4.jpg" alt="image4">
                     <figcaption>Image4</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/img/image5.jpg" alt="image5">
+                    <img src="img/image5.jpg" alt="image5">
                     <figcaption>Image5</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/img/image6.jpg" alt="image6">
+                    <img src="img/image6.jpg" alt="image6">
                     <figcaption>Image6</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/img/image7.jpg" alt="image7">
+                    <img src="img/image7.jpg" alt="image7">
                     <figcaption>Image7</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/img/image8.jpg" alt="image8">
+                    <img src="img/image8.jpg" alt="image8">
                     <figcaption>Image8</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/img/image9.jpg" alt="image9">
+                    <img src="img/image9.jpg" alt="image9">
                     <figcaption>Image9</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/img/image10.jpg" alt="image10">
+                    <img src="img/image10.jpg" alt="image10">
                     <figcaption>Image10</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/img/image11.jpg" alt="image11">
+                    <img src="img/image11.jpg" alt="image11">
                     <figcaption>Image11</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/img/image12.jpg" alt="image12">
+                    <img src="img/image12.jpg" alt="image12">
                     <figcaption>Image12</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/img/image13.jpg" alt="image13">
+                    <img src="img/image13.jpg" alt="image13">
                     <figcaption>Image13</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/img/image14.jpg" alt="image14">
+                    <img src="img/image14.jpg" alt="image14">
                     <figcaption>Image14</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/img/image15.jpg" alt="image15">
+                    <img src="img/image15.jpg" alt="image15">
                     <figcaption>Image15</figcaption>
                 </figure>
             </div>
